style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {	margin: 0;	padding: 0;	border: 0;	font-size: 100%;	font: inherit;	vertical-align: baseline;}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {	display: block;}
body {	line-height: 1;}
ol, ul {	list-style: none;}
blockquote, q {	quotes: none;}
blockquote:before, blockquote:after,q:before, q:after {	content: '';	content: none;}
table {	border-collapse: collapse;	border-spacing: 0;}

/* Clearfix Reloaded: http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified/ */
.clearfix:before,.clearfix:after {  content: ".";      display: block;      height: 0;      overflow: hidden;	}
.clearfix:after {clear: both;}
.clearfix {zoom: 1;} /* IE < 8 */

/* Micro Clearfix: http://nicolasgallagher.com/micro-clearfix-hack/ */

/* For modern browsers */
.cf:before,.cf:after {content:"";display:table;}
.cf:after {clear:both;}

/* For IE 6/7 (trigger hasLayout) */
.cf {*zoom:1;}


/* APP Style */
html,body{
	background:#FFF;
	font-family: Tahoma, Arial, sans-serif;
	color:#333;
	overflow: hidden;
	-webkit-tap-highlight-color:rgba(0,0,0,0);
}
em{
	font-style: italic;
}


#header{
	width:100%;
	background:#cd3e3e;
	color:#FFF;
	text-align:center;
	height:50px;	
	position:fixed;
	top:0;
	z-index:100;
}

#header table{
	width:100%;
	border:0px;
}
#header table td{
	vertical-align:middle;
	text-align:center;
	height:50px;
}
#header table td a{
	color:#FFF;
	text-decoration:none;
	display:block;
}
#header table td.boton{
	width:55px;
	text-align:center;
	font-size:22px;
}
#header table td.titulo{
	font-size:18px;
	color:#FFF;
	transform:scale(1,1.4); /* W3C */
    -webkit-transform:scale(1,1.4); /* Safari and Chrome */
    -moz-transform:scale(1,1.4); /* Firefox */
    -ms-transform:scale(1,1.4); /* IE 9 */
    -o-transform:scale(1,1.4); /* Opera */
    letter-spacing: 1.3;
	font-weight:bold;
}

#menu{
	height:60px;
	width:100%;
	background:#ededed;
	position:fixed;
	top:50px;
	z-index:100;
}
#menu table{
	margin: 0 auto;
}
#menu table td{
	text-align:center;
	vertical-align: middle;
	padding-top:4px;
	width:80px;
}
#menu table td a{
	color:#444;
	text-decoration:none;
	display:block;
}
#menu table td.active a{
	color:#cd3e3e;
}
#menu table td a i{
	font-size:20px;
	display:block;
	margin-top:5px;
}
#menu table td a span{
	display:block;
	clear:both;
	font-size:11px;
	padding-top:2px;
	letter-spacing: 1.2;
}


#btnBack,
#btnSearch{
	display:none;
}
#divBusqueda{
	display:none;
	padding:10px 0;
}
#btnClose{
	color: #999;
	position: relative;
	bottom: 42px;
	left: 87%;
	font-size: 25px;
}
#busqueda{
	color: #333;  
	cursor: pointer;
	display: block; 
	width: 95%; 
	margin:0 auto;
	padding:7px 10px;
	font-size:20px;
	border:1px solid #999;
}

#content{
	width:100%;
	font-size:18px;
	line-height:22px;
	padding-top:110px;
}

#content h2{
	font-size:26px;
	line-height:27px;
	display:block;
	margin:15px 0;
	color:#c84c4c;
}
#content h3{
	display:block;
	color:#000;
	border-bottom:1px solid #777;
	padding:5px;
	margin:20px 0 10px 0;
	font-size:20px;
	font-weight:bold;
}

#content h4{
	display:block;
	color:#000;
	padding:5px;
	margin:15px 0 5px 0;
	font-size:18px;
	font-weight:bold;
}
#content p{
	margin:15px 10px;
	letter-spacing: 1px;
}
#content div p sup{
	color:#C84C4C;
	font-size:80%;
	bottom:5px;
	position:relative;
	margin-left:2px;
}
#content table{
	width:95%;
	margin:0 auto;
	font-weight:normal;
}
#content table td{
	display:block;
	border-bottom:1px solid #cd3e3e;
	vertical-align: middle;
}

#content table td a:link,
#content table td a:visited{
	color:#333;
	text-decoration:none;
	display: block;
	padding: 15px 9px;
	letter-spacing: 1px;
}

#content table td.explicacion a:link,
#content table td.explicacion a:visited{
	border-bottom: 1px dotted #cd3e3e;
}
#content table td i{
	color:#cd3e3e;
	font-size: 24px;
	padding:0 5px;
}

#content table td i.small{
	font-size:18px;
}
#content a:link,
#content a:visited{
	color:#c84c4c;
	text-decoration:none;
}
#content table tr.active{
	background:#cd3e3e;
}
#content table tr.active i{
	color:#FFF;
}
#content table tr.active a:link,
#content table tr.active a:visited{
	color:#FFF;
}

#content .explicacion ul{
	margin-bottom:10px;
}
#content .explicacion ul li{
	background: none;
	padding-right:0;
	font-size:13px;
	font-style:italic;
}

#about,
#email,
#parabolas{
	width:95%;
	margin:0 auto;
}




/* iPhone with no retina display */
@media screen {
    body {
        
    }
}

/* iPhone < 5 and retina display */
@media screen and (device-height: 480px) and (-webkit-min-device-pixel-ratio: 2) {
    body {
        
    }
}

/* iPhone 5 and retina display*/
@media screen and (device-height: 568px) and (-webkit-min-device-pixel-ratio: 2) {
    body {
        
    }
}

